--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,11 @@
         "**/.vscode": true,
         ".vscode": true,
         "**/node_modules": true,
-        "node_modules": true
+        "node_modules": true,
+        "**/.bundle": true,
+        ".bundle": true,
+        "**/__tests__": true,
+        "__tests__": true
     },
     "explorerExclude.backup": {}
 }
