--- a/package.json
+++ b/package.json
@@ -13,22 +13,26 @@
     "prettier": "prettier --write 'react/**/*.{ts,tsx}' && tslint --fix --project ."
   },
   "dependencies": {
+    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
+    "moment": "^2.30.1",
     "react": "18.2.0",
+    "react-intl": "^6.6.6",
     "react-native": "0.73.6",
     "react-native-date-picker": "^5.0.2",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-redux": "^9.1.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
-    "typed-async-storage": "^3.1.2",
-    "moment": "^2.30.1"
+    "rxjs": "^7.8.1",
+    "typed-async-storage": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
