--- a/ios/.xcode.env
+++ b/ios/.xcode.env
@@ -9,3 +9,7 @@
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
 export NODE_BINARY=$(command -v node)
+export fabric_enabled=true
+export hermes_enabled=true
+export RCT_NEW_ARCH_ENABLED=true
+
