--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint --fix --ext=jsx,ts,tsx .",
     "start": "react-native start",
     "test": "jest",
-    "format": "prettier --write 'react/**/*.{ts,tsx}'",
-    "format:check": "prettier -c 'react/**/*.{ts,tsx}'",
-    "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install",
-    "prettier": "prettier --write 'react/**/*.{ts,tsx}' && tslint --fix --project ."
+    "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install"
   },
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.6.0",
@@ -48,13 +45,10 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "eslint-plugin-jsdoc": "^48.2.4",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-react": "^5.0.0",
     "typescript": "5.0.4"
   },
   "engines": {
