--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,16 @@
 {
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/Thumbs.db": true,
-        "**/.history": true,
-        ".history": true,
-        "**/.vscode": true,
-        ".vscode": true,
-        "**/node_modules": true,
-        "node_modules": true,
-        "**/.bundle": true,
-        ".bundle": true,
-        "**/__tests__": true,
-        "__tests__": true
-    },
-    "explorerExclude.backup": {}
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/.history": true,
+    "**/.vscode": true,
+    "**/node_modules": true,
+    "**/.bundle": true,
+    "**/__tests__": false
+  },
+  "explorerExclude.backup": {}
 }
