--- a/package.json
+++ b/package.json
@@ -42,16 +42,24 @@
     "@react-native/eslint-config": "0.74.83",
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
-    "eslint-plugin-jsdoc": "^48.2.4",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
+    "eslint-plugin-jsdoc": "^48.2.4",
+    "jest": "^29.7.0",
     "react-test-renderer": "18.2.0",
+    "redux-mock-store": "^1.5.4",
     "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
+  },
+  "jest": {
+    "preset": "react-native",
+    "testMatch": [
+      "**/__tests__/*.test.ts"
+    ]
   }
 }
