--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "FitFat",
+  "main": "index.js",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,19 +12,18 @@
     "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install"
   },
   "dependencies": {
-    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.3",
     "moment": "^2.30.1",
+    "expo-constants": "~16.0.1",
     "react": "18.2.0",
     "react-intl": "^6.6.6",
     "react-native": "0.73.6",
     "react-native-date-picker": "^5.0.2",
     "react-native-element-dropdown": "^2.12.0",
-    "react-native-localize": "^3.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
@@ -32,7 +32,11 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "rxjs": "^7.8.1",
-    "typed-async-storage": "^3.1.2"
+    "typed-async-storage": "^3.1.2",
+    "expo": "^50.0.0",
+    "expo-localization": "~14.8.4",
+    "@react-native-community/slider": "4.4.2",
+    "expo-status-bar": "~1.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
