--- a/package.json
+++ b/package.json
@@ -12,49 +12,50 @@
     "pod-install": "cd ios && RCT_NEW_ARCH_ENABLED=1 bundle exec pod install"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "@reduxjs/toolkit": "^2.2.3",
-    "moment": "^2.30.1",
-    "expo-constants": "~16.0.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "6.5.20",
+    "@react-navigation/native": "6.1.17",
+    "@react-navigation/native-stack": "6.9.26",
+    "@reduxjs/toolkit": "2.2.5",
+    "moment": "2.30.1",
+    "expo-constants": "16.0.1",
     "react": "18.2.0",
-    "react-intl": "^6.6.6",
+    "react-intl": "6.6.6",
     "react-native": "0.73.6",
-    "react-native-date-picker": "^5.0.2",
-    "react-native-element-dropdown": "^2.12.0",
-    "react-native-paper": "^5.12.3",
+    "react-native-date-picker": "5.0.2",
+    "react-native-element-dropdown": "2.12.0",
+    "react-native-paper": "5.12.3",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-vector-icons": "^10.1.0",
-    "react-redux": "^9.1.1",
-    "redux": "^5.0.1",
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "10.1.0",
+    "react-redux": "9.1.2",
+    "redux": "5.0.1",
     "redux-thunk": "^3.1.0",
-    "rxjs": "^7.8.1",
+    "rxjs": "7.8.1",
     "typed-async-storage": "^3.1.2",
-    "expo": "^50.0.0",
-    "expo-localization": "~14.8.4",
+    "expo": "51.0.5",
+    "expo-localization": "15.0.3",
     "@react-native-community/slider": "4.4.2",
-    "expo-status-bar": "~1.11.1"
+    "expo-status-bar": "1.12.1",
+    "expo-sqlite": "14.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
+    "@babel/core": "7.24.5",
+    "@babel/preset-env": "7.24.5",
+    "@babel/runtime": "7.24.5",
     "@react-native/babel-preset": "0.74.83",
     "@react-native/eslint-config": "0.74.83",
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
-    "@types/jest": "^29.5.12",
-    "@types/react": "^18.2.6",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.6.3",
-    "eslint": "^8.19.0",
-    "eslint-plugin-jsdoc": "^48.2.4",
-    "jest": "^29.7.0",
+    "@types/jest": "29.5.12",
+    "@types/react": "18.3.2",
+    "@types/react-test-renderer": "18.3.0",
+    "babel-jest": "29.7.0",
+    "eslint": "9.2.0",
+    "eslint-plugin-jsdoc": "48.2.5",
+    "jest": "29.7.0",
     "react-test-renderer": "18.2.0",
-    "redux-mock-store": "^1.5.4",
+    "redux-mock-store": "1.5.4",
     "typescript": "5.0.4"
   },
   "engines": {
