--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react": "18.2.0",
     "react-intl": "6.6.6",
     "react-native": "0.73.6",
-    "react-native-date-picker": "5.0.2",
     "react-native-element-dropdown": "2.12.0",
     "react-native-paper": "5.12.3",
     "react-native-safe-area-context": "4.8.2",
@@ -37,7 +36,8 @@
     "expo-localization": "15.0.3",
     "@react-native-community/slider": "4.4.2",
     "expo-status-bar": "1.12.1",
-    "expo-sqlite": "14.0.3"
+    "expo-sqlite": "14.0.3",
+    "@react-native-community/datetimepicker": "8.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.24.5",
