--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,8 @@
     "**/__tests__": true,
     "**/android": true,
     "**/.expo": true,
-    "**/ios": true
+    "**/ios": true,
+    "**/.idea": true
   },
   "explorerExclude.backup": {}
 }
