--- a/app.json
+++ b/app.json
@@ -14,6 +14,12 @@
   "expo": {
     "plugins": [
       "expo-localization"
-    ]
+    ],
+    "android": {
+      "package": "com.nmarsollier.fitfat"
+    },
+    "ios": {
+      "bundleIdentifier": "com.nmarsollier.fitfat"
+    }
   }
 }
