--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
     "redux": "5.0.1",
     "redux-thunk": "^3.1.0",
     "rxjs": "7.8.1",
-    "typed-async-storage": "^3.1.2"
+    "typed-async-storage": "^3.1.2",
+    "react-dom": "18.2.0",
+    "react-native-web": "~0.19.10",
+    "@expo/metro-runtime": "~3.2.1",
+    "expo-dev-client": "~4.0.18"
   },
   "devDependencies": {
     "@babel/core": "7.24.5",
