--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
     "**/ios": true,
     "**/.idea": true
   },
-  "explorerExclude.backup": {}
+  "explorerExclude.backup": {},
+  "git.ignoreLimitWarning": true
 }
