--- a/app.json
+++ b/app.json
@@ -1,23 +1,32 @@
 {
-  "name": "FitFat",
-  "displayName": "FitFat",
-  "splash": {
-    "image": "./app/assets/img/splash.png",
-    "resizeMode": "contain"
-  },
-  "android": {
-    "adaptiveIcon": {
-      "foregroundImage": "./app/assets/img/splash.png",
-      "backgroundColor": "#ffffff"
-    }
-  },
   "expo": {
-    "plugins": [
-      "expo-localization"
-    ],
+    "name": "FitFat",
+    "displayName": "FitFat",
+    "splash": {
+      "image": "./assets/img/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
     "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/img/splash.png",
+        "backgroundColor": "#ffffff"
+      },
       "package": "com.nmarsollier.fitfat"
     },
+    "scheme": "com.nmarsollier.fitfat",
+    "web": {
+      "bundler": "metro"
+    },
+    "plugins": [
+      "expo-localization",
+      [
+        "expo-router",
+        {
+          "root": "./app/routes"
+        }
+      ]
+    ],
     "ios": {
       "bundleIdentifier": "com.nmarsollier.fitfat"
     }
