--- a/ios/FitFat/Info.plist
+++ b/ios/FitFat/Info.plist
@@ -28,6 +28,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>com.nmarsollier.fitfat</string>
+          <string>com.nmarsollier.fitfat</string>
         </array>
       </dict>
       <dict>
@@ -48,6 +49,10 @@
       <key>NSAllowsLocalNetworking</key>
       <true/>
     </dict>
+    <key>NSUserActivityTypes</key>
+    <array>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
+    </array>
     <key>UILaunchStoryboardName</key>
     <string>SplashScreen</string>
     <key>UIRequiredDeviceCapabilities</key>
