--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "FitFat",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "version": "0.0.1",
-  "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -15,16 +14,14 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/slider": "4.5.2",
-    "@react-navigation/bottom-tabs": "6.5.20",
     "@react-navigation/native": "6.1.17",
-    "@react-navigation/native-stack": "6.9.26",
     "@reduxjs/toolkit": "2.2.5",
     "@types/redux-mock-store": "^1.0.6",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
     "expo-localization": "15.0.3",
     "expo-sqlite": "14.0.3",
-    "expo-status-bar": "1.12.1",
+    "expo-status-bar": "~1.12.1",
     "moment": "2.30.1",
     "react": "18.2.0",
     "react-intl": "6.6.6",
@@ -42,7 +39,9 @@
     "react-dom": "18.2.0",
     "react-native-web": "~0.19.10",
     "@expo/metro-runtime": "~3.2.1",
-    "expo-dev-client": "~4.0.18"
+    "expo-dev-client": "~4.0.18",
+    "expo-router": "~3.5.16",
+    "expo-linking": "~6.3.1"
   },
   "devDependencies": {
     "@babel/core": "7.24.5",
