--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
       [
         "expo-router",
         {
-          "root": "./app/routes"
+          "root": "./routes"
         }
       ]
     ],
