--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,13 +6,15 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
-    "**/.history": true,
-    "**/.vscode": true,
     "**/node_modules": true,
+    "**/.expo": true,
+    "**/.vscode": false,
+    "**/.github": true,
+    "**/.husky": true,
+    "**/.history": true,
     "**/.bundle": true,
     "**/__tests__": true,
     "**/android": true,
-    "**/.expo": true,
     "**/ios": true,
     "**/.idea": true
   },
