--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,14 +8,14 @@
     "**/Thumbs.db": true,
     "**/node_modules": true,
     "**/.expo": true,
-    "**/.vscode": false,
+    "**/.vscode": true,
     "**/.github": true,
-    "**/.husky": true,
     "**/.history": true,
-    "**/.bundle": true,
-    "**/__tests__": true,
     "**/android": true,
     "**/ios": true,
+    "**/.husky": true,
+    "**/.bundle": true,
+    "**/__tests__": true,
     "**/.idea": true
   },
   "explorerExclude.backup": {},
