--- a/package.json
+++ b/package.json
@@ -9,30 +9,32 @@
     "android:build:dev": "eas build -e development -p android --no-wait --local"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/slider": "4.5.2",
     "@react-navigation/native": "6.1.17",
+    "class-validator": "^0.14.1",
     "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
-    "expo-dev-client": "~4.0.18",
+    "expo-dev-client": "~4.0.25",
     "expo-linking": "~6.3.1",
     "expo-localization": "15.0.3",
-    "expo-router": "~3.5.16",
-    "expo-sqlite": "14.0.3",
+    "expo-router": "~3.5.23",
+    "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.24",
     "moment": "2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^15.0.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.5",
     "react-native-element-dropdown": "2.12.0",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "5.12.3",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-vector-icons": "10.1.0",
     "react-native-web": "~0.19.10",
     "rxjs": "7.8.1",
@@ -61,6 +63,7 @@
     "intl-pluralrules": "^2.0.1",
     "jest": "29.7.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3",
     "typescript-eslint": "7.11.0"
